--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
+*,
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  padding: 5px;
+  cursor: pointer;
+}
+
+li:hover {
+  background-color: teal;
+  border-radius: 5px;
+}
+
+i {
+  padding: 8px;
+  cursor: pointer;
+  color: rgb(223, 138, 117);
+}
+
+i:hover {
+  background-color: teal;
+  color: white;
+  border-radius: 5px;
 }
