--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+body {
+  background-image: linear-gradient(to right, #303235, #1e252c);
+}
+
+
 a {
   text-decoration: none;
   color: inherit;
